5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1764_1187.log
== TEST (2019-05-23 16:50:04) 
-- CODE:
a = "yasmin"
new = s.replace("y","d")
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    new = s.replace("y","d")
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:50:23) 
-- CODE:
a = "yasmin"
new = a.replace("y","d")
print(new)
-- OUTPUT:
dasmin
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
